Update dashboard with formatted % Sales Score

--- a/Pharma_CRO_Statistics.html
+++ b/Pharma_CRO_Statistics.html
@@ -2516,48 +2516,32 @@ color: #333;
 </head>
 <body style="background-color: white;">
 <div id="htmlwidget_container">
-  <div class="datatables html-widget html-fill-item" id="htmlwidget-17c66eb250a94eaa43ce" style="width:100%;height:auto;"></div>
+  <div class="datatables html-widget html-fill-item" id="htmlwidget-827c490e49592a2ea5f9" style="width:100%;height:auto;"></div>
 </div>
-<script type="application/json" data-for="htmlwidget-17c66eb250a94eaa43ce">{"x":{"filter":"none","vertical":false,"extensions":["Scroller"],"caption":"<caption style=\"caption-side: top; text-align: center; font-size:24px; font-weight:700;&#10;             text-transform: uppercase; background-color:#EFA05C; padding:10px;\">\n    <img src='Logo_Philmed.png' style='height:60px; vertical-align:middle; margin-right:10px;'>\n    CROs DAILY PROGRESSIVE REPORT SUMMARY TABLE<br>\n    <div id='liveClock' style='font-size:22px; font-weight:700; margin-top:6px;'><\/div>\n    <\/caption>","data":[["WINNIE WAMBUI","ALVIN OLIECH","NO OFFICE CRO","BELINDA ORIMBA AKOTH","KERUBO DOROTHY","NELVIN MUHANJI","MELLANIE MKABILI","DOREEN KAVINYA","KWAMBOKA MERCY","NO OFFICE CRO","MAUREEN WANGUI","PACIFICAH RABERA","ANN TINDA","SALLY NYABOKE","NO OFFICE CRO","NELVIN MUHANJI","BELINDA ONJIKO","MELLANIE MKABILI","GETRUDE NYANSIABOKA","NYABERI NYABUTO DENN","BENTINA SAVIMBI","NYABERI NYABUTO DENN","ELIZABETH BOCHERE","KERUBO DOROTHY","DINAH OMARI","SHERYL ACHIENG","DOREEN KAVINYA","SALLY NYABOKE","ANN TINDA","MERCY CHEPCHEPKORIR","ANTHONY MWANGI NJARA","DOREEN KAVINYA","BENTINA SAVIMBI","VYONNE NETIA MALOBA","MELLANIE MKABILI","OBACHI ISAIAH","SHERYL ACHIENG","TRIPHWANZA","ELIZABETH BOCHERE","TRIPHWANZA","PACIFICAH RABERA","DINAH OMARI","NO OFFICE CRO","NO OFFICE CRO","GETRUDE NYANSIABOKA","RUTH ADHIAMBO","MAUREEN WANGUI","MAUREEN WANGUI","KERUBO DOROTHY","NO OFFICE CRO","SALLY NYABOKE","ANTHONY MWANGI NJARA","NO OFFICE CRO"],["CORPORATE","LILIAN MUENI","AMMEAL MICHEKA","MARION NJERI","RODGERS ODHIAMBO","AMMEAL MICHEKA","NANCY MAMBOLEO","CHRISTINE MUTONGOI","YVONNE MUNYENJE","JOASH KIAGE","JOHN NDETI","EMMANUEL OBIRI","MARION NJERI","RODGERS ODHIAMBO","AMMEAL MICHEKA","JOASH KIAGE","EMMANUEL OBIRI","NANCY MAMBOLEO","EMMANUEL OBIRI","MAUREEN NYABUTO","JEMOURINE","JEMOURINE","LILIAN MUENI","CHRISTINE MUTONGOI","JOASH KIAGE","JOHN NDETI","NANCY MAMBOLEO","AMMEAL MICHEKA","MARION NJERI","RODGERS ODHIAMBO","AMMEAL MICHIEKA","NANCY MAMBOLEO","MAUREEN NYABUTO","JEMOURINE","NANCY MAMBOLEO","CHRISTINE MUTONGOI","JOASH KIAGE","MAUREEN NYABUTO","RODGERS ODHIAMBO","MARION NJERI","CHRISTINE MUTONGOI","RODGERS ODHIAMBO","AMMEAL MICHEKA","JEMOURINE","JEMOURINE","CHRISTINE MUTONGOI","JEMOURINE","JEMOURINE","JEMOURINE","AMMEAL MICHEKA","NANCY MAMBOLEO","LILIAN MUENI","EMMANUEL OBIRI"],["CORPORATE","PIPELINE","NAIROBI CBD","UTAWALA","DANDORA","EASTLEIGH","KAMULU","JOGOO ROAD","UMOJA","LUNGA LUNGA","KAYOLE","KIAMAIKO","TASSIA","KARIOBANGI NORTH","WESTLANDS","SOUTH B","MATHARE","RUAI","HURUMA","KARIOBANGI SOUTH","SAIKA","BEE CENTER","KWARE","BURU BURU","REUBEN","SOWETO","JOSKA","NGARA","EMBAKASI","LUCKY SUMMER","MOMBASA ROAD","MALAA","KIAMBIO","CHOKAA","TALA","DONHOLM","NJENGA","MOWLEM","BABA DOGO","FEDHA","SHAURI MOYO","NGOMONGO","PANGANI","KAYOLE JUNCTION","KOMAROCKS","GIKOMBA","NJIRU","MATOPENI","OBAMA","MLANGO KUBWA","KANGUNDO","IMARA DAIMA","RUARAKA"],[416.4023333333334,131.8433333333333,117.8493333333333,110.7343333333333,71.57433333333333,69.833,58.742,56.55533333333334,52.17833333333333,41.37133333333333,38.61233333333333,37.44966666666667,35.99833333333333,32.76466666666666,28.22666666666667,27.842,26.97466666666667,23.782,22.14666666666667,22.10333333333333,17.11533333333333,16.50766666666667,15.091,14.796,13.951,13.866,13.846,13.58933333333333,13.00866666666666,12.00166666666667,11.98233333333333,11.72133333333333,11.479,11.15766666666667,11.134,10.689,10.568,10.39733333333333,9.855666666666666,8.702999999999999,8.615333333333334,8.238666666666667,8.197666666666667,8.119999999999999,8.053333333333333,7.949666666666666,6.876,6.629666666666667,4.976,4.591333333333333,3.990666666666667,1.832666666666667,1.082666666666667]],"container":"<table class=\"stripe hover cell-border\">\n  <thead>\n    <tr>\n      <th>Office CRO<\/th>\n      <th>Field CRO<\/th>\n      <th>ROUTE<\/th>\n      <th>Sales Score<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"scrollX":true,"scrollY":"600px","deferRender":true,"scroller":true,"paging":false,"dom":"t","columnDefs":[{"width":"250px","targets":0},{"width":"250px","targets":1},{"width":"300px","targets":2},{"width":"150px","targets":3},{"className":"dt-center","targets":3},{"className":"dt-left","targets":2},{"name":"Office CRO","targets":0},{"name":"Field CRO","targets":1},{"name":"ROUTE","targets":2},{"name":"Sales Score","targets":3}],"order":[],"autoWidth":false,"orderClasses":false,"rowCallback":"function(row, data, displayNum, displayIndex, dataIndex) {\nvar value=data[0]; $(this.api().cell(row, 0).node()).css({'font-weight':'700','color':'black','font-size':'18px'});\nvar value=data[1]; $(this.api().cell(row, 1).node()).css({'font-weight':'700','color':'black','font-size':'18px'});\nvar value=data[2]; $(this.api().cell(row, 2).node()).css({'font-weight':'700','color':'black','font-size':'18px'});\nvar value=data[3]; $(this.api().cell(row, 3).node()).css({'font-weight':'700','color':'black','font-size':'18px'});\nvar value=data[0]; $(this.api().cell(row, 0).node()).css({'background-color':'#D6EAF8'});\nvar value=data[1]; $(this.api().cell(row, 1).node()).css({'background-color':'#D5F5E3'});\nvar value=data[2]; $(this.api().cell(row, 2).node()).css({'background-color':'#D5F5E3','text-align':'left'});\nvar value=data[3]; $(this.api().cell(row, 3).node()).css({'color':isNaN(parseFloat(value)) ? '' : value <= 60 ? \"red\" : \"blue\",'background-color':'#FCF3CF','text-align':'center'});\n}"}},"evals":["options.rowCallback"],"jsHooks":[]}</script>
-<script type="application/htmlwidget-sizing" data-for="htmlwidget-17c66eb250a94eaa43ce">{"viewer":{"width":"100%","height":"auto","padding":15,"fill":true},"browser":{"width":"100%","height":"auto","padding":40,"fill":false}}</script>
+<script type="application/json" data-for="htmlwidget-827c490e49592a2ea5f9">{"x":{"filter":"none","vertical":false,"extensions":["Scroller"],"caption":"<caption style=\"caption-side: top; text-align: center; font-size:24px; font-weight:700;&#10;             text-transform: uppercase; background-color:#EFA05C; padding:10px;\">\n    <img src='Logo_Philmed.png' style='height:60px; vertical-align:middle; margin-right:10px;'>\n    CROs DAILY PROGRESSIVE REPORT SUMMARY TABLE<br>\n    <div id='liveClock' style='font-size:22px; font-weight:700; margin-top:6px;'><\/div>\n    <\/caption>","data":[["ELIZABETH BOCHERE","NYABERI NYABUTO DENN","KERUBO DOROTHY","VYONNE NETIA MALOBA","WINNIE WAMBUI","KERUBO DOROTHY","OBACHI ISAIAH","NELVIN MUHANJI","ANN TINDA","TRIPHWANZA","RUTH ADHIAMBO","GETRUDE NYANSIABOKA","ANTHONY MWANGI NJARA","DOREEN KAVINYA","DOREEN KAVINYA","MELLANIE MKABILI","SALLY NYABOKE","SALLY NYABOKE","NYABERI NYABUTO DENN","MAUREEN WANGUI","NO OFFICE CRO","PACIFICAH RABERA","BENTINA SAVIMBI","GETRUDE NYANSIABOKA","ELIZABETH BOCHERE","MERCY CHEPCHEPKORIR","NO OFFICE CRO","DOREEN KAVINYA","BELINDA ONJIKO","MAUREEN WANGUI","NO OFFICE CRO","ANTHONY MWANGI NJARA","TRIPHWANZA","NO OFFICE CRO","SALLY NYABOKE","DINAH OMARI","SHERYL ACHIENG","MAUREEN WANGUI","KERUBO DOROTHY","NO OFFICE CRO","ALVIN OLIECH","DINAH OMARI","MELLANIE MKABILI","NO OFFICE CRO","BENTINA SAVIMBI","PACIFICAH RABERA","NELVIN MUHANJI","SHERYL ACHIENG","MELLANIE MKABILI","ANN TINDA","KWAMBOKA MERCY","BELINDA ORIMBA AKOTH","NO OFFICE CRO"],["RODGERS ODHIAMBO","JEMOURINE","CHRISTINE MUTONGOI","JEMOURINE","CORPORATE","RODGERS ODHIAMBO","CHRISTINE MUTONGOI","AMMEAL MICHEKA","MARION NJERI","MARION NJERI","CHRISTINE MUTONGOI","EMMANUEL OBIRI","LILIAN MUENI","CHRISTINE MUTONGOI","NANCY MAMBOLEO","NANCY MAMBOLEO","NANCY MAMBOLEO","RODGERS ODHIAMBO","MAUREEN NYABUTO","JOHN NDETI","JEMOURINE","EMMANUEL OBIRI","MAUREEN NYABUTO","JEMOURINE","LILIAN MUENI","RODGERS ODHIAMBO","JOASH KIAGE","NANCY MAMBOLEO","EMMANUEL OBIRI","JEMOURINE","AMMEAL MICHEKA","AMMEAL MICHIEKA","MAUREEN NYABUTO","AMMEAL MICHEKA","AMMEAL MICHEKA","RODGERS ODHIAMBO","JOASH KIAGE","JEMOURINE","JEMOURINE","AMMEAL MICHEKA","LILIAN MUENI","JOASH KIAGE","NANCY MAMBOLEO","EMMANUEL OBIRI","JEMOURINE","CHRISTINE MUTONGOI","JOASH KIAGE","JOHN NDETI","NANCY MAMBOLEO","MARION NJERI","YVONNE MUNYENJE","MARION NJERI","AMMEAL MICHEKA"],["BABA DOGO","BEE CENTER","BURU BURU","CHOKAA","CORPORATE","DANDORA","DONHOLM","EASTLEIGH","EMBAKASI","FEDHA","GIKOMBA","HURUMA","IMARA DAIMA","JOGOO ROAD","JOSKA","KAMULU","KANGUNDO","KARIOBANGI NORTH","KARIOBANGI SOUTH","KAYOLE","KAYOLE JUNCTION","KIAMAIKO","KIAMBIO","KOMAROCKS","KWARE","LUCKY SUMMER","LUNGA LUNGA","MALAA","MATHARE","MATOPENI","MLANGO KUBWA","MOMBASA ROAD","MOWLEM","NAIROBI CBD","NGARA","NGOMONGO","NJENGA","NJIRU","OBAMA","PANGANI","PIPELINE","REUBEN","RUAI","RUARAKA","SAIKA","SHAURI MOYO","SOUTH B","SOWETO","TALA","TASSIA","UMOJA","UTAWALA","WESTLANDS"],["305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%","305%"]],"container":"<table class=\"stripe hover cell-border\">\n  <thead>\n    <tr>\n      <th>Office CRO<\/th>\n      <th>Field CRO<\/th>\n      <th>ROUTE<\/th>\n      <th>Sales Score (%)<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"scrollX":true,"scrollY":"650px","deferRender":true,"scroller":true,"paging":true,"searching":false,"info":false,"lengthChange":false,"ordering":false,"processing":false,"dom":"t","columnDefs":[{"width":"220px","targets":0},{"width":"220px","targets":1},{"width":"280px","targets":2},{"width":"150px","targets":3},{"className":"dt-center","targets":3},{"className":"dt-left","targets":2},{"name":"Office CRO","targets":0},{"name":"Field CRO","targets":1},{"name":"ROUTE","targets":2},{"name":"Sales Score (%)","targets":3}],"order":[],"autoWidth":false,"orderClasses":false,"rowCallback":"function(row, data, displayNum, displayIndex, dataIndex) {\nvar value=data[0]; $(this.api().cell(row, 0).node()).css({'font-weight':'700','color':'black','font-size':'18px'});\nvar value=data[1]; $(this.api().cell(row, 1).node()).css({'font-weight':'700','color':'black','font-size':'18px'});\nvar value=data[2]; $(this.api().cell(row, 2).node()).css({'font-weight':'700','color':'black','font-size':'18px'});\nvar value=data[3]; $(this.api().cell(row, 3).node()).css({'font-weight':'700','color':'black','font-size':'18px'});\nvar value=data[0]; $(this.api().cell(row, 0).node()).css({'background-color':'#D6EAF8'});\nvar value=data[1]; $(this.api().cell(row, 1).node()).css({'background-color':'#D5F5E3'});\nvar value=data[2]; $(this.api().cell(row, 2).node()).css({'background-color':'#D5F5E3','text-align':'left'});\nvar value=data[3]; $(this.api().cell(row, 3).node()).css({'color':isNaN(parseFloat(value)) ? '' : value <= 60 ? \"red\" : \"blue\",'background-color':'#FCF3CF','text-align':'center'});\n}"}},"evals":["options.rowCallback"],"jsHooks":[]}</script>
+<script type="application/htmlwidget-sizing" data-for="htmlwidget-827c490e49592a2ea5f9">{"viewer":{"width":"100%","height":"auto","padding":15,"fill":true},"browser":{"width":"100%","height":"auto","padding":40,"fill":false}}</script>
 </body>
 </html>
-<script>
-(function(){
-  var speed = 2, tickMs = 60, waitTop = 5000, waitBottom = 10000;
-  function initScroll(){
-    var container = document.querySelector('.dataTables_scrollBody');
-    if(!container){ setTimeout(initScroll, 500); return; }
-    document.body.style.overflow = 'hidden';
-    var dir = 1;
-    function scrollStep(){
-      container.scrollTop += dir * speed;
-      if(dir === 1 && container.scrollTop + container.clientHeight >= container.scrollHeight - 2){
-        dir = -1;
-        setTimeout(()=>{ requestAnimationFrame(scrollStep); }, waitBottom);
-        return;
-      } else if(dir === -1 && container.scrollTop <= 1){
-        dir = 1;
-        setTimeout(()=>{ requestAnimationFrame(scrollStep); }, waitTop);
-        return;
-      }
-      requestAnimationFrame(scrollStep);
-    }
-    scrollStep();
-  }
-  document.addEventListener('DOMContentLoaded', initScroll);
-})();
-</script><script>
-(function(){
-  function updateClock(){
-    var now = new Date();
-    var options = {weekday:'long', year:'numeric', month:'short', day:'numeric',
-                   hour:'2-digit', minute:'2-digit', second:'2-digit',
-                   hour12:true, timeZone:'Africa/Nairobi'};
-    var el = document.getElementById('liveClock');
-    if(el) el.innerHTML = now.toLocaleString('en-US', options).toUpperCase();
-  }
-  setInterval(updateClock, 1000);
-  updateClock();
-})();
-</script>
+<script>(function(){
+var speed=2, tickMs=60;
+function find(){var c=document.querySelector('.dataTables_scrollBody');if(c){init(c);}else{setTimeout(find,200);}}
+function init(c){
+document.body.style.overflow='hidden';
+if(!(c.scrollHeight>c.clientHeight+4))return;
+setInterval(function(){
+c.scrollTop=(c.scrollTop+speed)%(c.scrollHeight-c.clientHeight);
+},tickMs);
+}
+document.addEventListener('DOMContentLoaded',find);
+})();</script><script>(function(){
+function updateClock(){
+var now=new Date();
+var options={weekday:'long',year:'numeric',month:'short',day:'numeric',
+hour:'2-digit',minute:'2-digit',second:'2-digit',hour12:true,
+timeZone:'Africa/Nairobi'};
+var el=document.getElementById('liveClock');
+if(el)el.innerHTML=now.toLocaleString('en-US',options).toUpperCase();
+}
+setInterval(updateClock,1000);
+updateClock();
+})();</script>
