--- a/Pharma_CRO_Statistics.html
+++ b/Pharma_CRO_Statistics.html
@@ -2516,35 +2516,71 @@ color: #333;
 </head>
 <body style="background-color: white;">
 <div id="htmlwidget_container">
-  <div class="datatables html-widget html-fill-item" id="htmlwidget-b98bd322d64e2286326e" style="width:100%;height:auto;"></div>
+  <div class="datatables html-widget html-fill-item" id="htmlwidget-cff6153d6b6db9104085" style="width:100%;height:auto;"></div>
 </div>
-<script type="application/json" data-for="htmlwidget-b98bd322d64e2286326e">{"x":{"filter":"none","vertical":false,"extensions":["Scroller"],"caption":"<caption style=\"&#10;  caption-side: top;&#10;  text-align: center;&#10;  font-size: 24px;&#10;  font-weight: 700;&#10;  text-transform: uppercase;&#10;  background-color: #FFFF00;&#10;  color: black;&#10;  padding: 15px 0;&#10;  width: 100vw;&#10;  margin: 0;&#10;  position: sticky;&#10;  top: 0;&#10;  left: 0;&#10;  z-index: 2000;&#10;  box-sizing: border-box;&#10;\">\n  <div style=\"display: flex; align-items: center; justify-content: space-between; gap: 20px; flex-wrap: wrap; padding: 0 40px;\">\n    <img src=\"Logo_Philmed.png\" style=\"height:60px; vertical-align:middle;\"/>\n    <div style=\"display: flex; flex-direction: column; align-items: center; justify-content: center;\">\n      <div>SALES BY ROUTE DAILY PROGRESSIVE REPORT SUMMARY TABLE<\/div>\n      <div id=\"liveClock\" style=\"font-size:22px; font-weight:700; margin-top:6px;\"><\/div>\n    <\/div>\n    <img src=\"Logo_Philmed.png\" style=\"height:60px; vertical-align:middle;\"/>\n  <\/div>\n<\/caption>","data":[["TRIPHWANZA","DINAH OMARI","TRIPHWANZA","RUTH ADHIAMBO","SALLY NYABOKE","TRIPHWANZA","TRIPHWANZA","JOSEPHINE MORAA","TRIPHWANZA","SHERYL ACHIENG","VYONNE NETIA MALOBA","BENTINA SAVIMBI","TRIPHWANZA","KWAMBOKA MERCY","BELINDA ORIMBA AKOTH","ANN TINDA","JOSEPHINE MORAA","ANN TINDA","WINNIE WAMBUI","BENTINA SAVIMBI","ELIZABETH BOCHERE","DOREEN KAVINYA","ANTHONY MWANGI NJARA","BELINDA ONJIKO","NELVIN MUHANJI","OBACHI ISAIAH","PACIFICAH RABERA","SHERYL ACHIENG","DINAH OMARI","KERUBO DOROTHY","ALVIN OLIECH","ANTHONY MWANGI NJARA","MERCY CHEPCHEPKORIR","MELLANIE MKABILI","KERUBO DOROTHY","NYABERI NYABUTO DENN","SALLY NYABOKE","GETRUDE NYANSIABOKA","SALLY NYABOKE","DOREEN KAVINYA","NYABERI NYABUTO DENN","PACIFICAH RABERA","GETRUDE NYANSIABOKA","DOREEN KAVINYA","KERUBO DOROTHY","MAUREEN WANGUI","NELVIN MUHANJI","MAUREEN WANGUI","ELIZABETH BOCHERE","TRIPHWANZA","MAUREEN WANGUI","MELLANIE MKABILI","MELLANIE MKABILI","BELINDA ONJIKO"],["AMMEAL MICHEKA","JOASH KIAGE","AMMEAL MICHEKA","EMMANUEL OBIRI","RODGERS ODHIAMBO","AMMEAL MICHEKA","EVERLINE","EMMANUEL OBIRI","CHRISTINE MUTONGOI","JEMOURINE","JEMOURINE","JEMOURINE","EMMANUEL OBIRI","YVONNE MUNYENJE","MARION NJERI","MARION NJERI","AMMEAL MICHEKA","MARION NJERI","RODGERS ODHIAMBO","JEMOURINE","RODGERS ODHIAMBO","NANCY MAMBOLEO","CHRISTINE MUTONGOI","EMMANUEL OBIRI","JOASH KIAGE","AMMEAL MICHEKA","CHRISTINE MUTONGOI","JOHN NDETI","JOASH KIAGE","AMMEAL MICHEKA","LILIAN MUENI","MAUREEN NYABUTO","JOASH KIAGE","NANCY MAMBOLEO","CHRISTINE MUTONGOI","JEMOURINE","RODGERS ODHIAMBO","LILIAN MUENI","MAUREEN NYABUTO","NANCY MAMBOLEO","JOHN NDETI","MAUREEN NYABUTO","LILIAN MUENI","NANCY MAMBOLEO","CHRISTINE MUTONGOI","JEMOURINE","MARION NJERI","JEMOURINE","RODGERS ODHIAMBO","AMMEAL MICHEKA","JEMOURINE","NANCY MAMBOLEO","NANCY MAMBOLEO","EMMANUEL OBIRI"],["NAIROBI CBD","REUBEN","PARKLANDS","HURUMA","NGOMONGO","NGARA","MACHAKOS","KIAMAIKO","GIKOMBA","NJIRU","CHOKAA","KOMAROCKS","RUARAKA","UMOJA","UTAWALA","TASSIA","MLANGO KUBWA","FEDHA","DANDORA","SAIKA","LUCKY SUMMER","JOSKA","JOGOO ROAD","MATHARE","SOUTH B","EASTLEIGH","SHAURI MOYO","SOWETO","NJENGA","PANGANI","PIPELINE","MOWLEM","LUNGA LUNGA","RUAI","BURU BURU","BEE CENTER","KARIOBANGI NORTH","IMARA DAIMA","KARIOBANGI SOUTH","KAMULU","KAYOLE","KIAMBIO","KWARE","MALAA","DONHOLM","KAYOLE JUNCTION","EMBAKASI","MATOPENI","BABA DOGO","WESTLANDS","OBAMA","KANGUNDO","TALA","ALLSOPS"],["84.87%","83.05%","73.12%","72.43%","50.95%","41.52%","34.38%","28.64%","25.77%","24.79%","21.89%","19.68%","19.48%","19.12%","18.77%","18.32%","17.54%","16.72%","16.7%","16.15%","15.74%","15.58%","15.34%","14.58%","14.25%","14.05%","14%","13.96%","13.56%","13.19%","13.02%","13%","12.92%","12.3%","12.23%","11.57%","10.77%","9.73%","9.69%","9.59%","9.27%","9.15%","8.89%","7.66%","7.29%","7.29%","6.88%","5.74%","4.94%","4.5%","3.08%","2.32%","0.01%","0%"]],"container":"<table class=\"stripe hover cell-border\">\n  <thead>\n    <tr>\n      <th>SALESPERSON<\/th>\n      <th>CRO NAME<\/th>\n      <th>ROUTE<\/th>\n      <th>%SALES SCORE<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"scrollX":true,"scrollY":"100vh","deferRender":true,"scroller":true,"paging":true,"pageLength":54,"searching":false,"info":false,"lengthChange":false,"ordering":false,"processing":false,"dom":"t","columnDefs":[{"width":"25%","targets":0},{"width":"25%","targets":1},{"width":"25%","targets":2},{"width":"25%","targets":3},{"className":"dt-center","targets":3},{"className":"dt-left","targets":[0,1,2]},{"name":"SALESPERSON","targets":0},{"name":"CRO NAME","targets":1},{"name":"ROUTE","targets":2},{"name":"%SALES SCORE","targets":3}],"order":[],"autoWidth":false,"orderClasses":false,"rowCallback":"function(row, data, displayNum, displayIndex, dataIndex) {\nvar value=data[0]; $(this.api().cell(row, 0).node()).css({'font-weight':'700','color':'black','font-size':'18px'});\nvar value=data[1]; $(this.api().cell(row, 1).node()).css({'font-weight':'700','color':'black','font-size':'18px'});\nvar value=data[2]; $(this.api().cell(row, 2).node()).css({'font-weight':'700','color':'black','font-size':'18px'});\nvar value=data[3]; $(this.api().cell(row, 3).node()).css({'font-weight':'700','color':'black','font-size':'18px'});\nvar value=data[0]; $(this.api().cell(row, 0).node()).css({'background-color':'#D6EAF8'});\nvar value=data[1]; $(this.api().cell(row, 1).node()).css({'background-color':'#FFC0CB'});\nvar value=data[2]; $(this.api().cell(row, 2).node()).css({'background-color':'#CCFFCC'});\nvar value=data[3]; $(this.api().cell(row, 3).node()).css({'color':isNaN(parseFloat(value)) ? '' : value <= 60 ? \"red\" : \"blue\",'background-color':'#FCF3CF','text-align':'center'});\n}"}},"evals":["options.rowCallback"],"jsHooks":{"render":[{"code":"\n    function(el, x) {\n      // Remove body scroll & white space\n      document.body.style.margin = '0';\n      document.body.style.padding = '0';\n      document.body.style.overflow = 'hidden';\n\n      // Force widget full-screen\n      $(el).css({\n        'width': '100vw',\n        'height': '100vh',\n        'margin': '0',\n        'padding': '0'\n      });\n      $(el).closest('.html-widget').css({\n        'width': '100vw',\n        'height': '100vh',\n        'margin': '0',\n        'padding': '0'\n      });\n\n      // Adjust scroll body height to leave room for header\n      $(el).closest('.dataTables_scrollBody').css({\n        'height': 'calc(100vh - 180px)',\n        'max-height': 'calc(100vh - 180px)'\n      });\n\n      // Green header styling\n      $(el).find('thead th').css({\n        'background-color': '#00FF00',\n        'color': 'black',\n        'font-weight': '700',\n        'font-size': '20px',\n        'text-align': 'center'\n      });\n    }\n  ","data":null}]}}</script>
-<script type="application/htmlwidget-sizing" data-for="htmlwidget-b98bd322d64e2286326e">{"viewer":{"width":"100%","height":"auto","padding":15,"fill":true},"browser":{"width":"100%","height":"auto","padding":40,"fill":false}}</script>
+<script type="application/json" data-for="htmlwidget-cff6153d6b6db9104085">{"x":{"filter":"none","vertical":false,"extensions":["Scroller"],"caption":"<caption style=\"&#10;  caption-side: top;&#10;  text-align: center;&#10;  font-size: 24px;&#10;  font-weight: 700;&#10;  text-transform: uppercase;&#10;  background-color: #FFFF00;&#10;  color: black;&#10;  padding: 15px 0;&#10;  width: 100vw;&#10;  margin: 0;&#10;  position: sticky;&#10;  top: 0;&#10;  left: 0;&#10;  z-index: 2000;&#10;  box-sizing: border-box;&#10;\">\n  <div style=\"display: flex; align-items: center; justify-content: space-between; gap: 20px; flex-wrap: wrap; padding: 0 40px;\">\n    <img src=\"Logo_Philmed.png\" style=\"height:60px; vertical-align:middle;\"/>\n    <div style=\"display: flex; flex-direction: column; align-items: center; justify-content: center;\">\n      <div>SALES BY ROUTE DAILY PROGRESSIVE REPORT SUMMARY TABLE<\/div>\n      <div id=\"liveClock\" style=\"font-size:22px; font-weight:700; margin-top:6px;\"><\/div>\n    <\/div>\n    <img src=\"Logo_Philmed.png\" style=\"height:60px; vertical-align:middle;\"/>\n  <\/div>\n<\/caption>","data":[["TRIPHWANZA","DINAH OMARI","TRIPHWANZA","RUTH ADHIAMBO","SALLY NYABOKE","TRIPHWANZA","TRIPHWANZA","JOSEPHINE MORAA","TRIPHWANZA","SHERYL ACHIENG","VYONNE NETIA MALOBA","BENTINA SAVIMBI","TRIPHWANZA","KWAMBOKA MERCY","BELINDA ORIMBA AKOTH","ANN TINDA","JOSEPHINE MORAA","ANN TINDA","WINNIE WAMBUI","BENTINA SAVIMBI","ELIZABETH BOCHERE","DOREEN KAVINYA","ANTHONY MWANGI NJARA","BELINDA ONJIKO","NELVIN MUHANJI","OBACHI ISAIAH","PACIFICAH RABERA","SHERYL ACHIENG","DINAH OMARI","KERUBO DOROTHY","ALVIN OLIECH","ANTHONY MWANGI NJARA","MERCY CHEPCHEPKORIR","MELLANIE MKABILI","KERUBO DOROTHY","NYABERI NYABUTO DENN","SALLY NYABOKE","GETRUDE NYANSIABOKA","SALLY NYABOKE","DOREEN KAVINYA","NYABERI NYABUTO DENN","PACIFICAH RABERA","GETRUDE NYANSIABOKA","DOREEN KAVINYA","KERUBO DOROTHY","MAUREEN WANGUI","NELVIN MUHANJI","MAUREEN WANGUI","ELIZABETH BOCHERE","TRIPHWANZA","MAUREEN WANGUI","MELLANIE MKABILI","MELLANIE MKABILI","BELINDA ONJIKO"],["AMMEAL MICHEKA","JOASH KIAGE","AMMEAL MICHEKA","EMMANUEL OBIRI","RODGERS ODHIAMBO","AMMEAL MICHEKA","EVERLINE","EMMANUEL OBIRI","CHRISTINE MUTONGOI","JEMOURINE","JEMOURINE","JEMOURINE","EMMANUEL OBIRI","YVONNE MUNYENJE","MARION NJERI","MARION NJERI","AMMEAL MICHEKA","MARION NJERI","RODGERS ODHIAMBO","JEMOURINE","RODGERS ODHIAMBO","NANCY MAMBOLEO","CHRISTINE MUTONGOI","EMMANUEL OBIRI","JOASH KIAGE","AMMEAL MICHEKA","CHRISTINE MUTONGOI","JOHN NDETI","JOASH KIAGE","AMMEAL MICHEKA","LILIAN MUENI","MAUREEN NYABUTO","JOASH KIAGE","NANCY MAMBOLEO","CHRISTINE MUTONGOI","JEMOURINE","RODGERS ODHIAMBO","LILIAN MUENI","MAUREEN NYABUTO","NANCY MAMBOLEO","JOHN NDETI","MAUREEN NYABUTO","LILIAN MUENI","NANCY MAMBOLEO","CHRISTINE MUTONGOI","JEMOURINE","MARION NJERI","JEMOURINE","RODGERS ODHIAMBO","AMMEAL MICHEKA","JEMOURINE","NANCY MAMBOLEO","NANCY MAMBOLEO","EMMANUEL OBIRI"],["NAIROBI CBD","REUBEN","PARKLANDS","HURUMA","NGOMONGO","NGARA","MACHAKOS","KIAMAIKO","GIKOMBA","NJIRU","CHOKAA","KOMAROCKS","RUARAKA","UMOJA","UTAWALA","TASSIA","MLANGO KUBWA","FEDHA","DANDORA","SAIKA","LUCKY SUMMER","JOSKA","JOGOO ROAD","MATHARE","SOUTH B","EASTLEIGH","SHAURI MOYO","SOWETO","NJENGA","PANGANI","PIPELINE","MOWLEM","LUNGA LUNGA","RUAI","BURU BURU","BEE CENTER","KARIOBANGI NORTH","IMARA DAIMA","KARIOBANGI SOUTH","KAMULU","KAYOLE","KIAMBIO","KWARE","MALAA","DONHOLM","KAYOLE JUNCTION","EMBAKASI","MATOPENI","BABA DOGO","WESTLANDS","OBAMA","KANGUNDO","TALA","ALLSOPS"],["84.87%","83.05%","73.12%","72.43%","50.95%","41.52%","34.38%","28.64%","25.77%","24.79%","21.89%","19.68%","19.48%","19.12%","18.77%","18.32%","17.54%","16.72%","16.7%","16.15%","15.74%","15.58%","15.34%","14.58%","14.25%","14.05%","14%","13.96%","13.56%","13.19%","13.02%","13%","12.92%","12.3%","12.23%","11.57%","10.77%","9.73%","9.69%","9.59%","9.27%","9.15%","8.89%","7.66%","7.29%","7.29%","6.88%","5.74%","4.94%","4.5%","3.08%","2.32%","0.01%","0%"]],"container":"<table class=\"stripe hover cell-border\">\n  <thead>\n    <tr>\n      <th>SALESPERSON<\/th>\n      <th>CRO NAME<\/th>\n      <th>ROUTE<\/th>\n      <th>%SALES SCORE<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"scrollX":true,"scrollY":"100vh","deferRender":true,"scroller":true,"paging":true,"pageLength":54,"searching":false,"info":false,"lengthChange":false,"ordering":false,"processing":false,"dom":"t","columnDefs":[{"width":"25%","targets":0},{"width":"25%","targets":1},{"width":"25%","targets":2},{"width":"25%","targets":3},{"className":"dt-center","targets":3},{"className":"dt-left","targets":[0,1,2]},{"name":"SALESPERSON","targets":0},{"name":"CRO NAME","targets":1},{"name":"ROUTE","targets":2},{"name":"%SALES SCORE","targets":3}],"order":[],"autoWidth":false,"orderClasses":false,"rowCallback":"function(row, data, displayNum, displayIndex, dataIndex) {\nvar value=data[0]; $(this.api().cell(row, 0).node()).css({'font-weight':'700','color':'black','font-size':'18px'});\nvar value=data[1]; $(this.api().cell(row, 1).node()).css({'font-weight':'700','color':'black','font-size':'18px'});\nvar value=data[2]; $(this.api().cell(row, 2).node()).css({'font-weight':'700','color':'black','font-size':'18px'});\nvar value=data[3]; $(this.api().cell(row, 3).node()).css({'font-weight':'700','color':'black','font-size':'18px'});\nvar value=data[0]; $(this.api().cell(row, 0).node()).css({'background-color':'#D6EAF8'});\nvar value=data[1]; $(this.api().cell(row, 1).node()).css({'background-color':'#FFC0CB'});\nvar value=data[2]; $(this.api().cell(row, 2).node()).css({'background-color':'#CCFFCC'});\nvar value=data[3]; $(this.api().cell(row, 3).node()).css({'color':isNaN(parseFloat(value)) ? '' : value <= 60 ? \"red\" : \"blue\",'background-color':'#FCF3CF','text-align':'center'});\n}"}},"evals":["options.rowCallback"],"jsHooks":{"render":[{"code":"\n    function(el, x) {\n      // Remove body scroll & white space\n      document.body.style.margin = '0';\n      document.body.style.padding = '0';\n      document.body.style.overflow = 'hidden';\n\n      // Force widget full-screen\n      $(el).css({\n        'width': '100vw',\n        'height': '100vh',\n        'margin': '0',\n        'padding': '0'\n      });\n      $(el).closest('.html-widget').css({\n        'width': '100vw',\n        'height': '100vh',\n        'margin': '0',\n        'padding': '0'\n      });\n\n      // Adjust scroll body height to leave room for header\n      $(el).closest('.dataTables_scrollBody').css({\n        'height': 'calc(100vh - 180px)',\n        'max-height': 'calc(100vh - 180px)'\n      });\n\n      // Green header styling\n      $(el).find('thead th').css({\n        'background-color': '#00FF00',\n        'color': 'black',\n        'font-weight': '700',\n        'font-size': '20px',\n        'text-align': 'center'\n      });\n    }\n  ","data":null}]}}</script>
+<script type="application/htmlwidget-sizing" data-for="htmlwidget-cff6153d6b6db9104085">{"viewer":{"width":"100%","height":"auto","padding":15,"fill":true},"browser":{"width":"100%","height":"auto","padding":40,"fill":false}}</script>
 </body>
 </html>
 <script>(function(){
-var direction=1,speed=2,tickMs=60,pauseMs=10000;
-function find(){var c=document.querySelector('.dataTables_scrollBody');if(c){init(c);}else{setTimeout(find,200);}}
-function init(c){
-document.body.style.overflow='hidden';
-if(!(c.scrollHeight>c.clientHeight+4))return;
-var interval=setInterval(function(){
-c.scrollTop += direction*speed;
-if(c.scrollTop + c.clientHeight >= c.scrollHeight || c.scrollTop <= 0){
-clearInterval(interval);
-setTimeout(function(){direction*=-1;init(c);},pauseMs);
+var speed = 2;                 // pixels per tick
+var tickMs = 60;               // frame interval
+var waitTop = 5000;            // pause at top
+var waitBottom = 10000;        // pause at bottom
+
+function findContainer(){
+  var c = document.querySelector('.dataTables_scrollBody');
+  if(c) startScroll(c);
+  else setTimeout(findContainer, 200);
 }
-},tickMs);
+
+function startScroll(c){
+  if(!(c.scrollHeight > c.clientHeight + 5)) return;
+  document.body.style.overflow = 'hidden';
+
+  var direction = 1;
+  var intervalId = null;
+
+  function doScroll(){
+    intervalId = setInterval(function(){
+      c.scrollTop = Math.max(
+        0,
+        Math.min(
+          c.scrollTop + direction * speed,
+          c.scrollHeight - c.clientHeight
+        )
+      );
+
+      // precisely detect when fully bottom or top reached
+      if(direction === 1 &&
+         Math.abs(c.scrollTop + c.clientHeight - c.scrollHeight) <= 1){
+        clearInterval(intervalId); intervalId = null;
+        direction = -1;
+        setTimeout(doScroll, waitBottom);
+      }
+      else if(direction === -1 && c.scrollTop <= 0){
+        clearInterval(intervalId); intervalId = null;
+        direction = 1;
+        setTimeout(doScroll, waitTop);
+      }
+    }, tickMs);
+  }
+
+  // ensure height fully fits screen before scrolling
+  function adjustHeight(){
+    var head = document.querySelector('.dataTables_scrollHead');
+    var headH = head ? head.offsetHeight : 0;
+    c.style.height = (window.innerHeight - headH - 2) + 'px';
+    c.style.maxHeight = (window.innerHeight - headH - 2) + 'px';
+  }
+
+  adjustHeight();
+  window.addEventListener('resize', adjustHeight);
+  doScroll();
 }
-document.addEventListener('DOMContentLoaded',find);
-})();</script><script>(function(){
-function updateClock(){
-var now=new Date();
-var options={weekday:'long',year:'numeric',month:'long',day:'numeric',
-hour:'2-digit',minute:'2-digit',second:'2-digit',hour12:true,
-timeZone:'Africa/Nairobi'};
-var el=document.getElementById('liveClock');
-if(el)el.innerHTML=now.toLocaleString('en-US',options).toUpperCase();
+
+document.addEventListener('DOMContentLoaded', findContainer);
+if(document.readyState === 'interactive' || document.readyState === 'complete'){
+  findContainer();
 }
-setInterval(updateClock,1000);updateClock();
-})();</script>
+})();</script><script>(function(){function updateClock(){var now=new Date();var options={weekday:'long',year:'numeric',month:'short',day:'numeric',hour:'2-digit',minute:'2-digit',second:'2-digit',hour12:true,timeZone:'Africa/Nairobi'};var el=document.getElementById('liveClock');if(el)el.innerHTML=now.toLocaleString('en-US',options).toUpperCase();}setInterval(updateClock,1000);updateClock();})();</script>
