--- a/Pharma_Beibora_CRO_Flip.html
+++ b/Pharma_Beibora_CRO_Flip.html
@@ -127,7 +127,7 @@
         if (timeUpdater) clearInterval(timeUpdater);
         timeUpdater = setInterval(() => {
           overlayTitle.textContent =
-            `PHARMA / BEIBORA PERFORMANCE AS AT ${getFormattedTime()} | # OPERATION NIGHT HAMMER`;
+            `PHARMA_BEIBORA_CRO SALES PERFORMANCE AS AT ${getFormattedTime()} | # OPERATION NIGHT HAMMER`;
         }, 1000);
       }
 
