Update title and dashboard durations in HTML

--- a/Pharma_Beibora_CRO_Branch_Flip.html
+++ b/Pharma_Beibora_CRO_Branch_Flip.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Pharma_Beibora_CRO_Flip</title>
+  <title>Pharma_Beibora_CRO_Branch_Flip</title>
   <style>
     html, body {
       margin: 0;
@@ -101,12 +101,12 @@
 
       // ✅ Order: 6 dashboards → then banner → repeat
       const dashboards = [
-        { url: "Pharma_Telesales_Statistics.html", duration: 60000 },
-        { url: "Beibora_Telesales_Statistics.html", duration: 30000 },
-        { url: "Pharma_CRO_Statistics.html", duration: 60000 },
-        { url: "Beibora_CRO_Statistics.html", duration: 60000 },
-        { url: "Pharma_Branch_Performance_Statistics.html", duration: 60000 },
-        { url: "Beibora_Branch_Performance_Statistics.html", duration: 60000 }
+        { url: "Pharma_Telesales_Statistics.html", duration: 20000 },
+        { url: "Beibora_Telesales_Statistics.html", duration: 20000 },
+        { url: "Pharma_CRO_Statistics.html", duration: 20000 },
+        { url: "Beibora_CRO_Statistics.html", duration: 20000 },
+        { url: "Pharma_Branch_Performance_Statistics.html", duration: 20000 },
+        { url: "Beibora_Branch_Performance_Statistics.html", duration: 20000 }
       ];
 
       // ✅ Remember last dashboard index and banner state
