--- a/Beibora_Flip.html
+++ b/Beibora_Flip.html
@@ -11,21 +11,22 @@
       overflow: hidden;
       background: black;
       font-family: Arial, sans-serif;
+      perspective: 1500px;
     }
 
     .flip-container {
-      perspective: 1500px;
       width: 100%;
       height: 100%;
       position: relative;
-      display: block;
+      perspective: 1500px;
     }
 
     .flipper {
       width: 100%;
       height: 100%;
       transform-style: preserve-3d;
-      transition: transform 4s ease-in-out;
+      transition: transform 2s ease-in-out;
+      position: relative;
     }
 
     .flip { transform: rotateY(180deg); }
@@ -85,13 +86,17 @@
     const beiboraFrame = document.getElementById("beiboraFrame");
     const bannerFrame = document.getElementById("bannerFrame");
 
-    // Load dashboards with cache-busting timestamps
-    beiboraFrame.src = "Beibora_Telesales_Statistics.html?nocache=" + new Date().getTime();
-    bannerFrame.src = "Banner.html?nocache=" + new Date().getTime();
+    const dashboards = [
+      { frame: beiboraFrame, url: "Beibora_Telesales_Statistics.html", duration: 120000 },
+      { frame: bannerFrame, url: "Banner.html", duration: 10000 }
+    ];
 
-    function updateHeader() {
+    let index = 0;
+    let lastCheck = null;
+
+    function getFormattedTime() {
       const now = new Date();
-      const formatted = now.toLocaleString('en-GB', {
+      return now.toLocaleString('en-GB', {
         day: '2-digit',
         month: 'long',
         year: 'numeric',
@@ -99,46 +104,55 @@
         minute: '2-digit',
         second: '2-digit'
       }).replace(',', '');
-      overlayTitle.textContent = `BEIBORA TELESALES PERFORMANCE AS AT ${formatted.toUpperCase()} | # OPERATION NIGHT HAMMER`;
+    }
+
+    function updateHeader() {
+      overlayTitle.textContent = `BEIBORA TELESALES PERFORMANCE AS AT ${getFormattedTime().toUpperCase()} | # OPERATION NIGHT HAMMER`;
     }
 
     setInterval(updateHeader, 1000);
     updateHeader();
 
-    const beiboraDuration = 120000;
-    const bannerDuration = 10000;
-    let showingBanner = false;
-
-    function flipCycle() {
-      flipper.classList.toggle("flip");
-      showingBanner = !showingBanner;
-      setTimeout(flipCycle, showingBanner ? bannerDuration : beiboraDuration);
+    function loadDashboard(i) {
+      const dash = dashboards[i];
+      dash.frame.src = dash.url + "?nocache=" + new Date().getTime();
     }
 
-    setTimeout(flipCycle, beiboraDuration);
+    function flipCycle() {
+      index = (index + 1) % dashboards.length;
+      loadDashboard(index);
 
-    // --- 🔄 Auto refresh mechanism when R script updates data ---
-    let lastCheck = null;
+      if(index === 0){
+        flipper.classList.remove("flip"); // show front
+      } else {
+        flipper.classList.add("flip"); // show back
+      }
 
+      setTimeout(flipCycle, dashboards[index].duration);
+    }
+
+    // Initial load
+    loadDashboard(0);
+    setTimeout(flipCycle, dashboards[0].duration);
+
+    // Auto refresh when R script updates data
     async function checkForUpdate() {
       try {
         const res = await fetch("refresh.json?nocache=" + new Date().getTime());
         if (!res.ok) return;
         const data = await res.json();
 
-        // Compare timestamps — if changed, reload the dashboard
-        if (lastCheck && data.timestamp !== lastCheck) {
-          console.log("Detected update from R script — refreshing dashboard...");
-          location.reload(true);
+        if(lastCheck && data.timestamp !== lastCheck){
+          console.log("Detected update from R script — refreshing current iframe...");
+          loadDashboard(index); // reload current visible iframe only
         }
         lastCheck = data.timestamp;
-      } catch (e) {
+      } catch(e) {
         console.warn("Update check failed:", e);
       }
     }
 
-    // Check every 10 seconds for changes
-    setInterval(checkForUpdate, 10000);
+    setInterval(checkForUpdate, 10000); // check every 10s
   </script>
 </body>
 </html>
